# bevy-starfighter

./: .gitignore  Cargo.toml  README.md  index.html  pve.ron  pyproject.toml  rust-toolchain.toml  test.py  train.py  train.ron  wasm-launcher-128ac10d791c4f.js  wasm-launcher-2c1bdf2a3db47600.js  wasm-launcher-711225f45ddd85ba.js  wasm-launcher-8416c5147517e6d7.js  wasm-launcher-cede6357bc5417f3.js  wasm-launcher-ee77538ec25d2e5d.js  xprun.ron
.github/workflows/: release-gh-pages.yml
assets/policies/: 230111-134322-versus-reldir-1024m.roguenet  230111-134322-versus-reldir-4096m.roguenet  versus-relpos-obsfix-128m.roguenet  versus-relpos-obsfix-512m.roguenet
assets/policies/ai12-2m/: config.ron  state.agent.msgpack  state.optimizer.msgpack  state.ron
assets/policies/ai12-8m/: config.ron  state.agent.msgpack  state.ron
assets/policies/ma-ai12fs4-64m/: config.ron  state.agent.msgpack  state.optimizer.msgpack  state.ron
assets/policies/versus2-64m/: config.ron  state.agent.msgpack  state.ron
launchers/native/: Cargo.toml
launchers/native/src/: benchmark.rs  main.rs
launchers/wasm/: Cargo.toml
launchers/wasm/src/: main.rs
src/: ccd.rs  lib.rs  python.rs
