[package]
name = "bevy-dogfight-ai"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
]

[lib]
crate-type = ["cdylib", "rlib"]
name = "bevy_dogfight_ai"

[[bin]]
name="native-launcher"
path="launchers/native/src/main.rs"

# Optimizations for WASM
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy = "0.8.1"
image = "0.24.3"
winit = "0.26.1"
heron = { version = "4", features = ["2d"] }
rand = { version = "0.8.5", features = ["small_rng"] }
# entity-gym-rs = "0.4.3"
entity-gym-rs = { path = "../entity-gym-rs" }
pyo3 = { version = "0.15", features = ["extension-module"], optional = true }
clap = { version = "3.1.7", features = ["derive"] }

[features]
python = ["pyo3", "entity-gym-rs/python"]#, "ragged-buffer/python"]