[package]
name = "native-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
bevy-dogfight-ai = { package = "bevy-dogfight-ai", path = "../.." }
bevy = "0.8"
image = "0.24.3"
winit = "0.26.1"
clap = { version = "3.1.7", features = ["derive"] }
entity-gym-rs = { path = "../../../entity-gym-rs" }