[package]
name = "native-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
bevy-starfighter = { package = "bevy-starfighter", path = "../.." }
bevy = "0.9"
image = "0.24.3"
winit = "0.27"
clap = { version = "3.1.7", features = ["derive"] }
# entity-gym-rs = { path = "../../../entity-gym-rs" }
entity-gym-rs = "0.8"
ragged-buffer = "0.3.8"

[features]
python = ["entity-gym-rs/python", "ragged-buffer/python", "bevy-starfighter/python"]

[profile.release]
debug = true